Added comments to code with directions

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
             function getPass(){
             pass = document.getElementById('pass_code').value
-            if (pass == 'GidenStoleMyJerky') {
+            //default pass = 'GidenStoleMyJerky'
+            if (pass == 'GidenStoleMyJerky') {  // Change the string to whatever pass you want.
                 window.location.href = "accepted.html"
             }
             else {
-                window.alert("Incorrect password, please try again.")
+                //defauly pass = "Incorrect password, please try again."
+                window.alert("Incorrect password, please try again.")  // you can change this message to whatever you want
             }
         }
         </script>
