--- a/accepted.html
+++ b/accepted.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Good job.</h1>
         <hr>
-        <p>PLACE HOLDER</p>  // change PLACE HOLDER to whatever the next hint can be
+        <p>PLACE HOLDER</p>  <--!change PLACE HOLDER to whatever the next hint can be-->
 
         <a href="index.html">Go back to password screen</a>
     </body>
